[package]
name = "looper"
version = "0.1.0"
authors = ["Simon Persson <simon.persson@mykolab.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4"
mio = "0.6"
stash = "0.1.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = {version = "0.1", features = ["mio-support"]}

[target.'cfg(windows)'.dependencies]
mio-named-pipes = "0.1"
winapi = {version = "0.3", features = ["synchapi", "winbase",  "threadpoollegacyapiset",]}
mio-extras = "2.0"
